# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.598 2012/06/07 12:03:22 blueness Exp $

*hardened-sources-3.2.19 (07 Jun 2012)

  07 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.19.ebuild:
  Based on 3.2.19 + genpatches-3.2-15 + grsecurity-2.9-3.2.19-201206042135

*hardened-sources-2.6.32-r108 (07 Jun 2012)

  07 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r108.ebuild:
  Based on 2.6.32.59 + genpatches-2.6.32-48 +
  grsecurity-2.9-2.6.32.59-201206042134

  02 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r106.ebuild, -hardened-sources-3.2.18.ebuild,
  -hardened-sources-3.3.7.ebuild:
  Remove broken versions, bug #418979

*hardened-sources-3.3.7-r1 (02 Jun 2012)

  02 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.3.7-r1.ebuild:
  Based on 3.3.7 + genpatches-3.3-8 + grsecurity-2.9-3.3.7-201206011935

*hardened-sources-3.2.18-r1 (02 Jun 2012)

  02 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.18-r1.ebuild:
  Based on 3.2.18 + genpatches-3.2-14 + grsecurity-2.9-3.2.18-201206011935

*hardened-sources-2.6.32-r107 (02 Jun 2012)

  02 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r107.ebuild:
  Based on 2.6.32.59 + genpatches-2.6.32-48 +
  grsecurity-2.9-2.6.32.59-201206011934

*hardened-sources-3.3.7 (28 May 2012)

  28 May 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.3.7.ebuild:
  Based on 3.3.7 + genpatches-3.3-8 + grsecurity-2.9-3.3.7-201205271953

*hardened-sources-3.2.18 (28 May 2012)

  28 May 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.18.ebuild:
  Based on 3.2.18 + genpatches-3.2-14 + grsecurity-2.9-3.2.18-201205271952

*hardened-sources-2.6.32-r106 (28 May 2012)
