@@ -39,6 +39,8 @@ DIST genpatches-3.3-6.base.tar.bz2 159919 RMD160 dc0098f7bca982371293992e59dfbad
 DIST genpatches-3.3-6.extras.tar.bz2 17205 RMD160 eb3141c66ffb16282c2e2ef0fb5227a13172464d SHA1 4376fe5995aaa058cdd9081c003aeef56d099b5e SHA256 9356a196eb8aa74110165bc9d04674785693393c34f4a088d60bb0091ceb1bdc
 DIST genpatches-3.3-8.base.tar.bz2 187049 RMD160 43a10a9c1690f2f55878ab241edded9ccde54785 SHA1 6c1edca64253aff8b4a605c60b1b4e5e4c5286a7 SHA256 cddcbf365546c50aae080049d09fe55112443a79426c78c01e9fa6e89f4f72ed
 DIST genpatches-3.3-8.extras.tar.bz2 17205 RMD160 eb3141c66ffb16282c2e2ef0fb5227a13172464d SHA1 4376fe5995aaa058cdd9081c003aeef56d099b5e SHA256 9356a196eb8aa74110165bc9d04674785693393c34f4a088d60bb0091ceb1bdc
+DIST genpatches-3.3-9.base.tar.bz2 220169 RMD160 ed6a909c088e3244e86c3fd28cb8445f40b1e391 SHA1 54879224084f9b6868189def65bceda202b8dfb6 SHA256 8e33b2c9c3a8a1340160c94b081fe44cadb8a79b6bd3b8bfcfce4c78171dc053
+DIST genpatches-3.3-9.extras.tar.bz2 17199 RMD160 684b8ee4cdfd826c5713b96c8929d3b88fe72a9d SHA1 ab2111a4ffcf5b32479895007f39c6a77fd749cc SHA256 9c8fdc2671f1a66b5e473f35e2e49febc825d7383c009a5b626f44d872130cf4
 DIST hardened-patches-2.6.32-106.extras.tar.bz2 735391 RMD160 00107a5ab1321c84a524bb7f372233123493b089 SHA1 447f7e60ef6c9ed241ad41f81bc8b69afa16d202 SHA256 0acdebfd11c765240c5b004aeb7a3866d095f0ce018fc7ed5ece99009eb328a5
 DIST hardened-patches-2.6.32-107.extras.tar.bz2 731133 RMD160 f4d8bcd7741e621cc36d2d311c2ab472e53be79c SHA1 6aad4117f669b0e99f265cda4b95c917d68867da SHA256 34f1edddad1e374093e841c68a453ac9bdfb08c24ef51eeb5ff56aa1da9c37c0
 DIST hardened-patches-2.6.32-109.extras.tar.bz2 740096 RMD160 ca2cc47b3e7b3b1631e34477933e0a85d3c924e7 SHA1 354f3b076a6544f69166eb929dec4823dba9fd2d SHA256 33edcdb802af8643a7b75cdca0ed53f92ae8d022bd4c515b756cd34cdc020db3
@@ -62,6 +64,7 @@ DIST hardened-patches-3.2.2-2.extras.tar.bz2 549864 RMD160 13c1c5229cadf18c08a08
 DIST hardened-patches-3.3.6-1.extras.tar.bz2 554371 RMD160 70859746c163defcdb63234a72726978a4531ec9 SHA1 2316fa6df563bac83282726222b1c136e88add4b SHA256 6b8a8395997307a040031d46ca273a81cc69118f74c8f271aa6fe280b96fe7c7
 DIST hardened-patches-3.3.6-2.extras.tar.bz2 566101 RMD160 ce50d30d5404b4435240fe291d028e842d7ea3c5 SHA1 c8ce961436a7ca1937b388a27baa5b73dffcf5f6 SHA256 48299477a17cda5972b0c9c82ee01259e8d5f367298854f8f362dabf2bcc362e
 DIST hardened-patches-3.3.7-2.extras.tar.bz2 549752 RMD160 6a3c81687d713606872281fadfba9a3a4ba2de5c SHA1 fec7ec6b1b7b13bb9dca6bd80f652adc5ef9fe54 SHA256 6719eb0d4e58ca3c449ba5df22d5ac04c1ba2dc7649a3d02176822b0e6761c43
+DIST hardened-patches-3.3.8-1.extras.tar.bz2 550705 RMD160 f1723d28ab7bd84e8a2864d445161df9f127dd39 SHA1 e74588414e2f8a5e77f0133fb994b097f63af987 SHA256 ace43fd903364b7dac5b59308e0cd04a9d439a8d95b1e419bcdca03738ea15b9
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST linux-2.6.39.tar.bz2 76096559 RMD160 feddc516bc15e78f12f611ff184d38baa4eac4ee SHA1 68518112821e55f4ac1df64f2e0e809cedfcc5ef SHA256 584d17f2a3ee18a9501d7ff36907639e538cfdba4529978b8550c461d45c61f6
 DIST linux-3.0.tar.bz2 76753134 RMD160 e20c9564ec0c8128e28a4c038986d4d93bbe34bb SHA1 45b64bffc860f70ab7956da4493c488010714650 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0
@@ -91,13 +94,14 @@ EBUILD hardened-sources-3.2.2-r1.ebuild 1845 RMD160 1c3369d5e8099eaeb91368148a0f
 EBUILD hardened-sources-3.3.6-r1.ebuild 1842 RMD160 d7ce091e74c7588a13766698104c82117d085396 SHA1 5210bd276959d7fd7ef4ba4f3ffc29d18404f1be SHA256 190aa0544fbd8e7a5fbc52ca745b78379e22d6f223d47b4981e94e92a8e18f2a
 EBUILD hardened-sources-3.3.6.ebuild 1839 RMD160 478bcfa5765599334122d332eeecefba5bdab58c SHA1 d7da9dafeddd6632b2e1f32415c8ef1dfa035c79 SHA256 d9e852b3282463a09679d7d4be625a0fc5e623b8effa7386c870d9c2c615c076
 EBUILD hardened-sources-3.3.7-r1.ebuild 1842 RMD160 95f25d6e4e416b7ed2b68a60cefa4726cf8b547a SHA1 024d757b15551345398d54a7f5f6be6624a5f2ca SHA256 f7dee540e890ce824ade4e548cdf3346f15291ea4b01a994308c1dba1d4775ff
-MISC ChangeLog 18020 RMD160 21591adc814b62e20c5c03fa267013c7e07c5fab SHA1 7c84b0dbf5eb2823bcc972e396cd2798cf31a3a7 SHA256 05d4cbfe4115ba32ba7f18750d75c2c844340b721e2aa44ff08319bf11dcabf8
+EBUILD hardened-sources-3.3.8.ebuild 1839 RMD160 afbd4b0c6cac00dc0514990ceb56e6fdddc04673 SHA1 88eab765ea4f7bad4bf94502d478d7e182ba3678 SHA256 0c725725a5192bb7b9ac0c70a2280c7c7885ecd795dedbf37b2b1fad19a36e3b
+MISC ChangeLog 18221 RMD160 b0985f72441c02fa8028e316c5e07b1f5c8c5807 SHA1 90e2181f4d7aa934b707309686557485455848dc SHA256 2ddd0c091b807d298b98a8822312323d1bc297a75b10b4255170bd3698b019de
 MISC ChangeLog-2011 112069 RMD160 2a385edf0499f6dc30581100b66f641fb64f77ef SHA1 af33094b92426b6abd963227d817db249ccbe877 SHA256 39bac69a08709be5b79c6e711fd94aac7e53191b76fef64f9b3d09f7b5ac0f82
 MISC metadata.xml 651 RMD160 bd2f856b7c5aea29652610491cd60135e1e9b9f1 SHA1 1741d5fc80ad8f934fa7ad177b4662d1993d8584 SHA256 614ce0d6e8cfcf0b4dbf344b2758f25375afdaadccbfa4f68c3f8f058218f0a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk/QmJUACgkQl5yvQNBFVTX8VgCgjiNVVptb12QuFHvEud90i7m8
-9/IAni9Ic93GSo6+WYdw9f6MDOURhvrQ
-=WdX7
+iEYEAREIAAYFAk/QmRoACgkQl5yvQNBFVTWhywCeJ32OWcBq+rv6aOG/ha2JO4wB
+nbEAoJBY2jWVq0g20ycjSCBH/5BI5v1Z
+=LdNH
 -----END PGP SIGNATURE-----
